clean code and SOLID